# sdk-python

./: .gitignore  CHANGELOG.md  README.md  openapi-python-client.config.yaml  pyproject.toml
docs/: configuration.md  errors.md  evaluation.md  executions.md  files.md  reference.md  workflows.md
examples/: quickstart.py
scripts/: codegen.sh  local_smoke.py
src/eigenpal/: __init__.py  _files.py  _telemetry.py  client.py  errors.py
src/eigenpal/_generated/: __init__.py  client.py
src/eigenpal/_generated/api/agents/: agents_create.py  agents_executions_cancel.py  agents_executions_expected_create.py  (+38 more)
src/eigenpal/_generated/models/: __init__.py  agent_execution_expected_artifacts.py  agent_execution_expected_artifacts_files_item.py  agent_execution_feedback.py  agent_execution_feedback_detail.py  agent_execution_feedback_detail_expected_files_item.py  agent_execution_feedback_rating_type_0.py  agent_execution_feedback_status_type_0.py  agent_execution_response.py  agent_execution_summary.py  agent_execution_summary_expected_files_item.py  agent_execution_summary_feedback_type_0.py  agent_execution_summary_feedback_type_0_rating_type_0.py  agent_execution_summary_feedback_type_0_status_type_0.py  agent_execution_summary_triggered_by_type_0.py  agent_file_body.py  agent_files_body.py  agent_files_body_files_item.py  agent_run_execution.py  agent_run_execution_expected.py  agent_run_execution_files.py  agent_run_response.py  agent_summary.py  agent_summary_config.py  agent_summary_source_integrity.py  agent_summary_stats.py  agent_summary_triggers.py  agents_executions_expected_create_files_body.py  agents_executions_expected_create_response_201.py  agents_executions_files_download_kind.py  agents_executions_list_feedback_rating.py  agents_executions_list_feedback_status.py  agents_executions_list_order.py  agents_executions_list_sort.py  agents_files_put_body.py  agents_files_put_response_200.py  agents_files_put_response_409.py  agents_files_upload_batch_body.py  agents_files_upload_batch_response_200.py  agents_files_upload_batch_response_409.py  (+324 more)
tests/: test_files.py  test_smoke.py
(+101 files in other folders)
