[project]
name = "eigenpal"
version = "0.10.15"
description = "Official Python SDK for the EigenPal API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "EigenPal", email = "support@eigenpal.com" }]
maintainers = [{ name = "EigenPal", email = "support@eigenpal.com" }]
keywords = [
    "eigenpal",
    "sdk",
    "api",
    "client",
    "workflow",
    "workflows",
    "automation",
    "document-extraction",
    "document-understanding",
    "ocr",
    "ai",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "httpx >= 0.24.0, < 0.30.0",
    "attrs >= 21.3.0",
    "python-dateutil >= 2.8.0",
]

[project.urls]
Homepage = "https://eigenpal.com"
Documentation = "https://github.com/eigenpal/sdk-python#readme"
Repository = "https://github.com/eigenpal/sdk-python"
Issues = "https://github.com/eigenpal/sdk-python/issues"
Changelog = "https://github.com/eigenpal/sdk-python/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eigenpal"]

[tool.hatch.build.targets.sdist]
include = ["src/eigenpal", "README.md", "LICENSE"]

[dependency-groups]
dev = [
    "openapi-python-client >= 0.21.0",
    "pytest >= 7.0.0",
    "respx >= 0.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
